# Integrated-Vision-Inspection-System-IVIS

./: .dockerignore  .env.sample  .gitignore  CITATION.cff  Dockerfile  Dockerfile.cpu  LICENSE  NOTICE  README.md  apache_header  docker-compose-camera.yml  docker-compose.cpu.yml  docker-compose.debug.yml  docker-compose.yml  mosquitto.conf  pyproject.toml  requirements.txt  requirements_no_hash.txt  requirements_tmp.txt  shrdc_project.code-workspace  workspace.code-workspace
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: dependabot.yml  stop-dependabot.yml
.streamlit/: config.toml  secrets.sample.toml
requirement-files/: requirements.txt
requirement-files/conda/: conda-environment.yml  requirements.txt  requirements.yml
requirement-files/pypi-requirements/: requirements.txt
resources/: mqtt_benchmark.csv  task_sample_working.json  tfod_pretrained_models.csv
resources/dev_resources/: Integrated Vision Inspection System.xmind
resources/postgres/: erd.pgerd  erd_pgadmin  erd_v2.pgerd  erd_v2.sql  erd_v2_FK.sql  erd_v2_generated.pgerd
resources/pretrained_model_tables/: classif_pretrained_models.csv  segment_pretrained_models.csv  tfod_pretrained_models.csv
resources/task_project /: project_full.json  task_export_classification.json
src/: __init__.py  app.py  database_setup.py  image_upload.py  template.py  test_sql.py
src/.streamlit/: .stable_random_id  config.toml  secrets.sample.toml
src/daily_log/: 20_07.ipynb  21_07.ipynb  22_07.ipynb  (+8 more)
test/: front.html  random_stream.py  serv2.py  serve.py  webcam_test.py
(+361 files in other folders)
